--- a/resume.html
+++ b/resume.html
@@ -17,41 +17,42 @@
 			</table>
 
 			<p2><strong>EDUCATION</strong></p2>
-				<p3><strong>North High School,</strong> Fargo, ND 58102</p3>
-					<p4>August 2010 - May 2014<br />
-						My electives focused on computers and networking, having taken two semesters on Microsoft tools, two semesters of Computer Engineering and four semesters on Cisco Networking.
+				<p3><strong>Emerging Digital Academy</strong> Fargo, ND 58103</p3>
+					<p4>March 2021 - July 2021<br />
+						As part of this course I have learned Full Stack Software development. Included in this Full Stack education is JavaScript, JQuery, React, Node, and SQL.
 					</p4>
 				<p3><strong>NDSU,</strong> Fargo, ND 58102</p3>
 					<p4>August 2014 - May 2016<br />
 						I did not have a consistent focus for a major, though most classes related to history, philosophy, and religious studies.
 					</p4>
-				<p3><strong>Emerging Digital Academy</strong> Fargo, ND 58103</p3>
-					<p4>March 2021 - July 2021<br />
-						As part of this course I have learned Full Stack Software development. Included in this Full Stack education is JavaScript, JQuery, React, Node, and SQL.
+				
+				<p3><strong>North High School,</strong> Fargo, ND 58102</p3>
+					<p4>August 2010 - May 2014<br />
+						My electives focused on computers and networking, having taken two semesters on Microsoft tools, two semesters of Computer Engineering and four semesters on Cisco Networking.
 					</p4>
 			<br />
 
 			<p2><strong>SKILLS</strong></p2>
-			<p3><strong>Leadership</strong></p3>
+			<p3><strong>Teamwork</strong></p3>
+				<p4>While a student at Emerging Digital Academy we would have to work on group projects where without proper teamwork the programs we were creating would not get done. Not only did we often have the programs finished but we would manage to get extra features completed.</p4>
+			<p3><strong>Full Stack Software Development</strong></p3>
+				<p4>As a student of Emerging Digital Academy I learned how to develop apps and websites using JavaScript, JQuery, React, Node, SQL, and more.</p4>
+				<p3><strong>Leadership</strong></p3>
 				<p4>While working for Subway I have often been left in charge during shifts. Even when I worked at the other stores in Fargo the managers would occasionally leave me in charge.</p4>
 			<p3><strong>Trustworthy</strong></p3>
 				<p4>I have been entrusted by many managers across the multiple Subway locations in Fargo to help train new employees, to open and close their stores by myself, and have even been entrusted with keys to many of the Fargo stores, not just the main store I was employed.</p4>
-			<p3><strong>Teamwork</strong></p3>
-				<p4>While a student at Emerging Digital Academy we would have to work on group projects where without proper teamwork the programs we were creating would not get done. Not only did we often have the programs finished but we would manage to get extra features completed.</p4>
 			<p3><strong>Microsoft Tools</strong></p3>
 				<p4>While in high school I took two semesters of classes dedicated to learning to use Microsoft Office, Powerpoint, Excel, and many other Microsoft tools.</p4>
-			<p3><strong>Full Stack Software Development</strong></p3>
-				<p4>As a student of Emerging Digital Academy I learned how to develop apps and websites using JavaScript, JQuery, React, Node, SQL, and more.</p4>
 			<br />
 
 			<p2><strong>EXPERIENCE</strong></p2>
+				<p3><strong>Subway,</strong> Fargo, ND 58104 &mdash; <em>Sandwich Artist</em></p3>
+					<p4>3757 55th Ave S<br />
+					October 2018 - March 2021</p4>
 				<p3><strong>Subway,</strong> Fargo, ND 58102 &mdash; <em>Sandwich Artist</em></p3>
 					<p4>1501 19th Ave N<br />
 					May 2015 - October 2018</p4>
-
-				<p3><strong>Subway,</strong> Fargo, ND 58104 &mdash; <em>Sandwich Artist</em></p3>
-					<p4>3757 55th Ave S<br />
-					October 2018 - March 2021</p4><br />
+				<br />
 
 			
 		</main>
