Updated wording of things

--- a/resume.html
+++ b/resume.html
@@ -23,12 +23,12 @@
 					</p4>
 				<p3><strong>NDSU,</strong> Fargo, ND 58102</p3>
 					<p4>August 2014 - May 2016<br />
-						I did not have a consistent focus for a major, though most classes related to history, philosophy, and religious studies.
+						My focus for a major and classes taken were history, philosophy, and religious studies.
 					</p4>
 				
 				<p3><strong>North High School,</strong> Fargo, ND 58102</p3>
 					<p4>August 2010 - May 2014<br />
-						My electives focused on computers and networking, having taken two semesters on Microsoft tools, two semesters of Computer Engineering and four semesters on Cisco Networking.
+						My electives focused on computers and networking. I took two semesters on Microsoft tools. Through the North Dakota State College of Science I took two semesters of Computer Engineering and four semesters on Cisco Networking.
 					</p4>
 			<br />
 
