--- a/resume.html
+++ b/resume.html
@@ -53,6 +53,8 @@
 					<p4>1501 19th Ave N<br />
 					May 2015 - October 2018</p4>
 				<br />
+				<br />
+			<p1>References will be provided upon request.</p1>
 
 			
 		</main>
